test-cases/negative/test_144_call_without_function.lay
# negative test: call statement without any function identifier
# expected: parser should reject this

call with 5 and 10


